--- a/vercel.json
+++ b/vercel.json
@@ -1,30 +1,22 @@
 {
-    "version": 2,
-    "builds": [
-        {
-         "src": "myprofile/wsgi.py",
-         "use": "@vercel/python",
-         "config": { "maxLambdaSize": "15mb", "runtime": "python3.11" }
+    "builds": [{
+        "src": "myprofile/wsgi.py",
+        "use": "@vercel/python",
+        "config": { "maxLambdaSize": "15mb", "runtime": "python3.9" }
     },
     {
-        "src": "builds_files.sh",
-        "use": "@vercel/static_build",
-        "config" :{
-          "distDir": "static_build"
-        }
-    }
-],
+        "src": "build_files.sh",
+        "use": "@vercel/static-build",
+        "config": { "distDir": "staticfiles_build" }
+    }],
     "routes": [
         {
-            "src":"/static/(.*)",
+            "src": "/static/(.*)",
             "dest": "/static/$1"
-
         },
-    {
-    "src":"/(.*)",
-    "dest": "myprofile/wsgi.py"
-    }
-    
-],
-"installCommand": "pip install -r requirements.txt"
+        {
+            "src": "/(.*)",
+            "dest": "myprofile/wsgi.py"
+        }
+    ]
 }
